Properties File Changes

--- a/src/main/resources/envConfig/local/config.properties
+++ b/src/main/resources/envConfig/local/config.properties
@@ -12,7 +12,7 @@ discoveryURL=https://dev-authenticationservice.devcloud.thirtyonegifts.com/.well
 # Callback URL for OIDC client setting
 ##############################################
 
-callBackURL=https://localhost:8443/
+callBackURL=https://localhost:8443/customweb/
 
 
 
@@ -20,4 +20,4 @@ callBackURL=https://localhost:8443/
 # Client configuration setting
 ##############################################
 
-clientsURL=https://dc1wdedwrpt04.31gifts.corp:8443/
+clientsURL=https://dc1wdedwrpt04.31gifts.corp:8443/customweb/
