--- a/src/main/resources/envConfig/prod/config.properties
+++ b/src/main/resources/envConfig/prod/config.properties
@@ -1,17 +1,18 @@
+
 ###############################################
 # OIDC configuration setting
 ##############################################
 
-clientId="LBMT"
-secret="restrict_cater_tray"
-discoveryURL="https://dev-authenticationservice.devcloud.thirtyonegifts.com/.well-known/openid-configuration"
+clientId=LBMT
+secret=restrict_cater_tray
+discoveryURL=https://dev-authenticationservice.devcloud.thirtyonegifts.com/.well-known/openid-configuration
 
 
 ###############################################
 # Callback URL for OIDC client setting
 ##############################################
 
-callBackURL="https://localhost:8443/"
+callBackURL=https://dashboard.mythirtyone.com/
 
 
 
@@ -19,4 +20,4 @@ callBackURL="https://localhost:8443/"
 # Client configuration setting
 ##############################################
 
-clientsURL = "https://dc1wdedwrpt04.31gifts.corp:8443/"
+clientsURL=https://dashboard.mythirtyone.com/
